tests/src/frontend/typechecking/invalid/frozen_lambda_captures_untracked.sk
untracked fun foo(): Int {
  0
}

untracked fun main(): void {
  _ = () ~> foo();
}
